# legend-engine

./: pom.xml
legend-pure-parser/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  rustfmt.toml
legend-pure-parser/.cargo/: config.toml
legend-pure-parser/crates/ast/: Cargo.toml  README.md
legend-pure-parser/crates/ast-derive/: Cargo.toml
legend-pure-parser/crates/ast-derive/src/: lib.rs
legend-pure-parser/crates/ast/src/: annotation.rs  element.rs  expression.rs  island.rs  lib.rs  section.rs  source_info.rs  test_utils.rs  type_ref.rs
legend-pure-parser/crates/cli/: Cargo.toml  README.md
legend-pure-parser/crates/cli/src/: diagnostics.rs  discovery.rs  main.rs
legend-pure-parser/crates/cli/src/commands/: check.rs  compile.rs  completions.rs  emit.rs  init.rs  mod.rs  package.rs  parse.rs  plan.rs  publish.rs  test.rs
legend-pure-parser/crates/compose/: Cargo.toml  README.md
legend-pure-parser/crates/compose/src/: element.rs  expression.rs  identifier.rs  island.rs  lib.rs  section.rs  type_ref.rs  writer.rs
legend-pure-parser/crates/compose/tests/: roundtrip_tests.rs
legend-pure-parser/crates/emitter/: Cargo.toml  README.md
legend-pure-parser/crates/emitter/src/: lib.rs  tests.rs
legend-pure-parser/crates/jni/: Cargo.toml  README.md
legend-pure-parser/crates/jni/src/: lib.rs
legend-pure-parser/crates/lexer/: Cargo.toml  README.md
legend-pure-parser/crates/lexer/src/: lexer.rs  lib.rs  token.rs
legend-pure-parser/crates/parser/: Cargo.toml  README.md
legend-pure-parser/crates/parser/src/: cursor.rs  document_tests.rs  error.rs  expr.rs  expr_tests.rs  island.rs  lib.rs  parser.rs
legend-pure-parser/crates/parser/tests/: helpers.rs  test_association.rs  test_class.rs  test_enumeration.rs  test_error_cases.rs  test_expression.rs  test_function.rs  test_graph_fetch.rs  test_measure.rs  test_primitives.rs  test_profile.rs  test_type_system.rs
legend-pure-parser/crates/parser/tests/corpus/: class_basic.pure  class_constraints.pure  class_default_values.pure  function_basic.pure  function_tests.pure  measure_convertible.pure
legend-pure-parser/crates/parser/tests/snapshots/: test_association__aggregation_kinds.snap  test_association__basic.snap  test_association__with_annotations_and_import.snap  test_class__aggregation_kinds.snap  test_class__basic.snap  test_class__complex_constraints.snap  test_class__default_values.snap  test_class__escaped_tagged_values.snap  test_class__multiple_annotations.snap  test_class__quoted_annotations.snap  test_class__quoted_package.snap  test_class__sourceinfo_validation.snap  test_class__type_parameters.snap  test_class__unit_properties.snap  test_class__with_import.snap  test_enumeration__basic_with_annotations.snap  test_enumeration__numeric_names.snap  test_enumeration__quoted_names.snap  test_error_cases__function_test_name_mismatch.snap  test_error_cases__reserved_keywords.snap  test_expression__arithmetic_precedence.snap  test_expression__boolean_precedence.snap  test_expression__cast.snap  test_expression__collection_with_function.snap  test_expression__comparison_with_arithmetic.snap  test_expression__enum_value_access.snap  test_expression__lambda_variants.snap  test_expression__let_binding.snap  test_expression__new_instance_nested.snap  test_expression__or_with_arithmetic.snap  test_function__basic_with_body.snap  test_function__date_return_types.snap  test_function__derived_multiple_statements.snap  test_function__full_path_meta_execution.snap  test_function__function_tests.snap  test_function__multi_if_expressions.snap  test_function__native_function_no_params.snap  test_function__native_function_simple.snap  test_function__overloading.snap  test_function__quoted_params_and_vars.snap  (+23 more)
legend-pure-parser/crates/protocol/: Cargo.toml  DESIGN.md  README.md
legend-pure-parser/crates/protocol/src/: lib.rs
legend-pure-parser/crates/protocol/src/v1/: annotation.rs  context.rs  convert.rs  element.rs  from_protocol.rs  generic_type.rs  mod.rs  multiplicity.rs  (+3 more)
legend-pure-parser/crates/protocol/tests/: e2e_snapshot_tests.rs  snapshot_tests.rs
legend-pure-parser/crates/pure/: Cargo.toml  DESIGN.md  README.md
legend-pure-parser/crates/pure/src/: annotations.rs  arena.rs  bootstrap.rs  error.rs  ids.rs  lib.rs  lower.rs  model.rs  pipeline.rs  resolve.rs  types.rs  validate.rs
legend-pure-parser/crates/pure/tests/: integration_tests.rs
legend-pure-parser/crates/runtime/: ARCHITECTURE.md  Cargo.toml
legend-pure-parser/crates/runtime/benches/: runtime_micro.rs
legend-pure-parser/crates/runtime/src/: context.rs  date.rs  error.rs  eval.rs  heap.rs  lib.rs  native.rs  value.rs
legend-pure-parser/crates/stress/: Cargo.toml
legend-pure-parser/crates/stress/src/: lib.rs
legend-pure-parser/crates/stress/tests/: stress_chaotic.rs  stress_dense.rs  stress_hub_spoke.rs
legend-pure-parser/docs/: SEMANTIC_VALIDATIONS.md
legend-pure-parser/docs/deferred/: navigation_path_grammar.md
legend-pure-parser/docs/grammar-convergance/: convergence_strategy.md  engine_vs_rust_analysis.md  grammar_analysis.md
legend-pure-parser/docs/runtime/: README.md  architecture_deep_questions.md  benchmarking_strategy.md  context_strategy.md  convergence_analysis.md  error_location_design.md  hybrid_compilation.md  memoization.md  metaprogramming.md  multiplicity_and_iteration.md  mutateadd_mechanics.md  performance_comparison.md  persistent_data_structures.md
legend-pure-parser/examples/: 01_trading_model.output.json  01_trading_model.pure  02_profiles.pure  03_functions.pure  04_inheritance.pure  05_measures.pure  06_protocol_sample.json  README.md
legend-pure-parser/examples/errors/: 01_missing_brace.pure  02_missing_semicolons.pure  03_bad_multiplicity.pure  04_unknown_keyword.pure  05_missing_return_type.pure  06_enum_errors.pure  07_mixed_valid_invalid.pure  08_compilation_errors.pure  README.md
legend-pure-parser/plugins/relation-accessor/: Cargo.toml
legend-pure-parser/plugins/relation-accessor/src/: lib.rs
legend-pure-parser/scripts/: check-copyright.sh
(+102 files in other folders)
