[workspace]
members = [
    "crates/ast",
    "crates/lexer",
    "crates/parser",
    "crates/emitter",
    "crates/jni",
    "plugins/relation-accessor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FINOS Legend Contributors"]

[workspace.dependencies]
linkme = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.14"
smol_str = "0.2"
thiserror = "1.0"
jni = "0.21"
