# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    "crates/ast",
    "crates/ast-derive",
    "crates/compose",
    "crates/lexer",
    "crates/parser",
    "crates/protocol",
    "crates/pure",
    "crates/jni",
    "crates/cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/finos/legend-engine"

[workspace.dependencies]
# Core
smol_str = "0.2"
thiserror = "2"
legend-pure-parser-ast-derive = { path = "crates/ast-derive" }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (protocol crate only)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JNI
jni = "0.21"

# Plugins
linkme = "0.3"

# Testing
insta = { version = "1", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
walkdir = "2"

[workspace.metadata.llvm-cov]
# Exclude JNI bridge from coverage (FFI boundary, tested via Java integration)
exclude = ["legend-pure-parser-jni"]
