# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "legend-cli"
description = "CLI for the Legend ecosystem — parse, compile, test, and publish Pure models"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "legend"
path = "src/main.rs"

[dependencies]
legend-pure-parser-ast = { path = "../ast" }
legend-pure-parser-compose = { path = "../compose" }
legend-pure-parser-lexer = { path = "../lexer" }
legend-pure-parser-parser = { path = "../parser" }
legend-pure-parser-protocol = { path = "../protocol" }

# CLI framework
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Diagnostics & output
miette = { workspace = true }
owo-colors = { workspace = true }

# File discovery
walkdir = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
