# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "legend-pure-parser-compose"
description = "AST to Pure grammar text composer for the Legend Pure parser"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
legend-pure-parser-ast = { path = "../ast" }
legend-pure-parser-protocol = { path = "../protocol", optional = true }
serde_json = { workspace = true, optional = true }

[features]
protocol = ["dep:legend-pure-parser-protocol", "dep:serde_json"]

[dev-dependencies]
insta = { workspace = true }
legend-pure-parser-parser = { path = "../parser" }
