# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "legend-pure-parser-jni"
description = "JNI bridge exposing the Rust Pure parser to Java"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
legend-pure-parser-ast = { path = "../ast" }
legend-pure-parser-lexer = { path = "../lexer" }
legend-pure-parser-parser = { path = "../parser" }
legend-pure-parser-emitter = { path = "../emitter" }
jni = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
