# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "legend-pure-parser-protocol"
description = "Protocol v1 JSON model and bidirectional AST conversion for the Legend Pure parser"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
legend-pure-parser-ast = { path = "../ast" }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
legend-pure-parser-parser = { path = "../parser" }
serde_json = { workspace = true }
