# Copyright 2026 Goldman Sachs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "legend-pure-runtime"
description = "Pure Runtime — interpreter, runtime heap, and execution engine for Legend Pure"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
legend-pure-parser-pure = { path = "../pure" }
legend-pure-parser-ast = { path = "../ast" }
smol_str = { workspace = true }
thiserror = { workspace = true }
im-rc = { workspace = true }
slotmap = { workspace = true }
rust_decimal = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime_micro"
harness = false
